# pytorch-custom-op

./: .gitignore  README.md  pyproject.toml  setup.py
csrc/: custom_op.cu  torch_bindings.cpp
pytorch_custom_op/: __init__.py  custom_ops.py
test/: test_myadd.py
